DTO 클래스 record 타입으로 전환